Fix: Constant visible white borders in the trace spans (#3125)
## Which problem is this PR solving?
- Resolves #3107 

## Description of the changes
- CSS changes only

## How was this change tested?
- Unit tests

### Before

https://github.com/user-attachments/assets/1746c222-ebf8-453e-a29f-ea11a44e09b7

### After

https://github.com/user-attachments/assets/b1798e02-03f4-48c9-8a8e-afd6be126b4e



https://github.com/user-attachments/assets/8ada6562-aa68-48a1-9565-d0baeafb8a59


## Checklist
- [x] I have read
https://github.com/jaegertracing/jaeger/blob/master/CONTRIBUTING_GUIDELINES.md
- [x] I have signed all commits
- [ ] I have added unit tests for the new functionality
- [x] I have run lint and test steps successfully
  - for `jaeger`: `make lint test`
  - for `jaeger-ui`: `npm run lint` and `npm run test`

--- a/packages/jaeger-ui/src/components/common/CopyIcon.css
+++ b/packages/jaeger-ui/src/components/common/CopyIcon.css
@@ -6,17 +6,11 @@ SPDX-License-Identifier: Apache-2.0
 .CopyIcon,
 .CopyIcon:hover {
   background-color: transparent;
-  border: 1px solid inherit;
+  border: none;
   color: inherit;
   height: 100%;
   overflow: hidden;
   padding: 1px;
   font-size: 13px;
   margin-left: 5px;
-  box-shadow: var(--shadow-sm);
-}
-
-.CopyIcon:focus {
-  background-color: var(--surface-primary);
-  color: inherit;
 }
